finished initial version

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/xp.css">
   </head>
-  <body>
-    <div class="window" style="margin: 32px; width: 1000px;">
+  <body style="background-color: #5a7edc;">
+    <div class="window" style="width: 800px; margin: 0 auto;">
       <div class="title-bar">
         <div class="title-bar-text">
           Welcome to my Website!
@@ -62,8 +62,10 @@
           </pre>
         </p>
           <div class="status-bar">
-            <p class="status-bar-field">Made with &#x2615; on &#x1F427;</p>
-            <p class="status-bar-field">
+            <p class="status-bar-field" style="text-align: center">
+              Made with &#x2615; on &#x1F427;
+            </p>
+            <p class="status-bar-field" style="text-align: center;">
               <a href="https://github.com/lquenti/lquenti.de">Fork me on Github</a>
             </p>
           </div>
