--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="window" style="width: 800px; margin: 0 auto;">
       <div class="title-bar">
         <div class="title-bar-text">
-          Welcome to my Website!
+          Welcome to my Website! (WIP)
         </div>
 
         <div class="title-bar-controls">
