--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<span style="color: #6ab825; font-weight: bold">&quot;city&quot;</span><span style="color: #d0d0d0">:</span> <span style="color: #ed9d13">&quot;Goettingen, Germany&quot;</span><span style="color: #d0d0d0">,</span>
 	<span style="color: #6ab825; font-weight: bold">&quot;currently_studying&quot;</span><span style="color: #d0d0d0">:</span> <span style="color: #d0d0d0">{</span>
 		<span style="color: #6ab825; font-weight: bold">&quot;Applied Computer Science&quot;</span> <span style="color: #d0d0d0">:</span> <span style="color: #ed9d13">&quot;B.Sc&quot;</span><span style="color: #d0d0d0">,</span>
-		<span style="color: #6ab825; font-weight: bold">&quot;Mathematics, B.Sc&quot;</span> <span style="color: #d0d0d0">:</span> <span style="color: #ed9d13">&quot;B.Sc&quot;</span>
+		<span style="color: #6ab825; font-weight: bold">&quot;Mathematics&quot;</span> <span style="color: #d0d0d0">:</span> <span style="color: #ed9d13">&quot;B.Sc&quot;</span>
 	<span style="color: #d0d0d0">},</span>
 	<span style="color: #6ab825; font-weight: bold">&quot;working_for&quot;</span><span style="color: #d0d0d0">:</span> <span style="color: #ed9d13">&quot;Max-Planck for biophysical Chemistry&quot;</span><span style="color: #d0d0d0">,</span>
 	<span style="color: #6ab825; font-weight: bold">&quot;languages&quot;</span><span style="color: #d0d0d0">:</span> <span style="color: #d0d0d0">{</span>
